# ccd-kaf-cdip24

./: .gitignore  README  README.md
doc/: thermistor.gnuplot
ecad/kaf_board/: ccd.sch  ccd_voltage.sch  fpga.sch  kaf_board.kicad_pcb  kaf_board.net  kaf_board.pro  kaf_board.sch  power.sch  power_requirements.ods  thermo_and_mechanical.sch  usb-interface.sch
ecad/kaf_board/kaf_board.pretty/: Barrel_jack_switched_SMD.kicad_mod  CDIP-24_20.2x34.5mm_P2.54mm.kicad_mod  HD-1440A.kicad_mod  L_Bourns_1210.kicad_mod  L_Bourns_SRR0604.kicad_mod  L_SMT_B82462G4.kicad_mod  L_Wuerth_LQS_5040.kicad_mod  Murata_L_SMD_19.5x27.0mm.kicad_mod  ONSemi_DPAK-3_5.97x6.35mm.kicad_mod  TI_WQFN-24-1EP_4x4mm_P0.5mm_HandSolder.kicad_mod  TI_WSON-10-1TP_3x3mm_P0.5mm_HandSolder.kicad_mod  TSSOP-20-1EP_4.4x6.5mm_P0.65mm.kicad_mod
ecad/kicad_libs/: ccd_camera.bck  ccd_camera.dcm  ccd_camera.lib
firmware/: Makefile  README.md  breadboard_tests.v  breadboard_tests.ys  controller.v  ice40hx1k-evb.pcf  nextpnr_clock_constraints.py  top.v  top.ys
firmware/include/: ccd_readout.vh  controller.vh
firmware/module/: ad9826_config.v  async_serial_fifo.v  ccd_readout.v  fifo.v  fifomem.v  ft245.v  mcp3008_interface.v  pwm.v  ram.v  rptr_empty.v  spi_slave.v  sr_latch.v  sync_ft245.v  sync_r2w.v  sync_w2r.v  tx_mux.v  wptr_full.v
firmware/testbench/: ad9826_config_state_filter.txt  ad9826_config_tb.v  breadboard_tests_tb.v  ccd_readout_tb.v  controller_tb.v  fifo.sby  fifo_tb.v  ft245.sby  ft245_loopback_tb.v  ft245_state_filter.txt  mcp3008_interface_tb.v  pwm_tb.v  spi_slave_tb.v  sync_ft245_tb.v  top.v  top_state_filter.txt  top_tb.gtkw  top_tb.v  tx_mux_tb.v  tx_tb.v
mechanical/: optical_window.scad
software/: .clang-format  CMakeLists.txt  ftdi2232h_eeprom.conf  main.cpp
software/include/: AD9826.hpp  CImgPlot.hpp  Camera.hpp  CameraConfiguration.hpp  ColorWheel.hpp  Fpga.hpp  Ft245.hpp  Ft245_if.hpp  PID.hpp  Thermistor.hpp  Verbosity.hpp
software/indigo/: README.md
software/indigo/ccd_mik/: Makefile.inc  indigo_ccd_mik.cpp  indigo_ccd_mik.h  indigo_ccd_mik_main.cpp
software/src/: CImgPlot.cpp  Camera.cpp  CameraConfiguration.cpp  ColorWheel.cpp  Ft245.cpp  PID.cpp  Thermistor.cpp
software/tests/: data_transfer.cpp  pid.cpp
software/tests/unit_tests/: CMakeLists.txt
software/tests/unit_tests/camera/: CMakeLists.txt  camera_tests.cpp
software/tests/unit_tests/camera_configuration/: CMakeLists.txt  camera_configuration_tests.cpp
software/tests/unit_tests/mocks/: Ft245Mock.hpp
spice/: bias_tee.asc
